# cookiecutter_python_package

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitlab-ci.yml  Dockerfile  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
{{cookiecutter.project_slug}}/requirements/base/: requirements.in  requirements.setup.in  requirements.test.in
