[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose --disable-socket
collect_ignore = ['setup.py']
python_files = test_*.py
testpaths = tests

[flake8]
max-line-length = 120

[isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = True

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
